# otk_control_app

./: .gitignore  OTK_DXF_Inspector.spec  README.md  README.txt  UI  build_windows_exe.bat  config.json  main.py  pyproject.toml  requirements.txt  run_windows_app.bat
app/: main_window.py  state.py  txt.txt
app/domain/: dxf_entities.py  models.py  repositories.py
app/infrastructure/: database.py  repositories.py  sqlite_repository.py
app/infrastructure/repository/: history.py  project.py
app/services/: config_service.py  dxf_parser.py  export_service.py  history_service.py  project_service.py
app/ui/: main_window.py  style.py  utils.py
app/ui/components/: dxf_view.py  point_card.py  point_dialog.py  project_dialog.py  sidebar.py  stat_card.py
app/ui/pages/: analytics_page.py  base_page.py  history_page.py  measurements_page.py  projects_page.py  reports_page.py  settings_page.py  template_page.py
data/: otk.db
data/examples/: 1221.dxf  123123.dxf  2222.dxf  dra2 2.dxf  dra2 3.dxf  dra2 33.dxf  hard.dxf  Фрагмент.dxf
data/samples/: demo_part.dxf
docs/: CHANGELOG.md
scripts/: build_exe.py
tests/: conftest.py  test_config_service.py  test_dxf_parser.py  test_export_service.py  test_project_service.py
