[project]
name = "otk-control-app"
version = "0.0.1"
description = "this project will show dxf files like prewiew and andlitics this"
authors = [
    {name = "yakoty777 & v1k1ng31"}
]
license = {text = "mit"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.7",
    "matplotlib>=3.8",
    "ezdxf>=1.3",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
