[project]
name = "otk-control-app"
version = "0.0.1"
description = "this project will show dxf files like prewiew and andlitics this"
authors = [
    {name = "yakoty777 & v1k1ng31"}
]
license = {text = "mit"}
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "PySide6>=6.7",
    "matplotlib>=3.8",
    "ezdxf>=1.3",
]

[project.optional-dependencies]
dev = ["pyinstaller>=6.0"]

[tool.pyinstaller]
name = "OTK_DXF_Inspector"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pyinstaller = ">=6.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
