[project]
name = "otk-control-app"
version = "0.0.2"
description = "this project will show dxf files like prewiew and andlitics this"
authors = [
    {name = "yakoty777 & v1k1ng31"}
]
license = {text = "mit"}
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "PySide6>=6.7",
    "matplotlib>=3.8",
    "ezdxf>=1.3",
]

[project.optional-dependencies]
dev = ["pyinstaller>=6.0", "pytest>=8.0", "mypy>=1.0", "ruff>=0.4"]

[tool.pyinstaller]
name = "OTK_DXF_Inspector"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = ["app/infrastructure/repository"]

[tool.ruff]
line-length = 79
target-version = "py312"
exclude = ["app/infrastructure/repository"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pyinstaller = ">=6.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
